# northern-powergrid-power-cuts

./: README.md  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
automations/: power_cut_notification.yaml  power_cut_resolved_notification.yaml
custom_components/northern_powergrid_power_cuts/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.yaml
custom_components/northern_powergrid_power_cuts/translations/: en.json
scripts/: __init__.py  bump_version.py
